# obs-studio

./: .gitgnore  .gitignore  CMakeLists.txt
cmake/Modules/: CompilerConfig.cmake  ObsDefaults_Linux.cmake  ObsHelpers.cmake  ObsHelpers_Linux.cmake
example/: CMakeLists.txt  obs_example.cpp  obsimp.cpp  obsimp.h
libobs/: CMakeLists.txt  obs-encoder.c  obs-internal.h  obs-nix-wayland.c  obs-nix-x11.c  obs-nix.c  obs-nix.h  obs-output.c  obs-scene.c  obs-scene.h  obs-service.c  obs-source.c  obs.c  obs.h
libobs-opengl/cmake/: legacy.cmake
libobs/cmake/: legacy.cmake
libobs/media-io/: audio-io.c
plugins/: CMakeLists.txt
plugins/image-source/: obs-slideshow.c
plugins/linux-v4l2/: v4l2-input.c
plugins/obs-ffmpeg/: obs-ffmpeg-mux.c  obs-ffmpeg-mux.h  obs-ffmpeg-source.c
